--- a/src/Products.css
+++ b/src/Products.css
@@ -1,15 +1,48 @@
 .product-container{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(5,1fr);
     grid-template-rows: auto;
 }
 .card{
     border: 1px solid hsl(0, 0%, 80%);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 .name{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
 }
 .img{
     width: 200px;
+    margin: auto;
+}
+.price{
+    font-size: 1.5rem;
+    font-weight: 800;
+}
+.quantity{
+    width: 50px;
+    height: 30px;
+    padding: 5px ;
+    border-radius: 5px;
+    font-size: 1rem;
+    
+}
+.cart-butt{
+    color: white;
+    background-color: green;
+    padding: 5px;
+    border-radius: 5px;
+    width: 80%;
+    font-size: 1.5rem;
+    text-align: center;
+    margin:auto;
+    margin-top: 15px;
+    cursor: pointer;
+}
+.cart-butt:hover{
+    background-color:hsl(100, 100%,35%) ;
+    cursor: pointer;
 }
