--- a/src/Products.css
+++ b/src/Products.css
@@ -4,7 +4,7 @@
     grid-template-rows: auto;
 }
 .card{
-    border: 1px solid hsl(0, 0%, 80%);
+    border: 1px solid rgb(240, 240, 240);;
     display: flex;
     flex-direction: column;
     gap: 20px;
