--- a/src/Products.css
+++ b/src/Products.css
@@ -1,36 +1,46 @@
-.product-container{
+.product-container {
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: auto;
 }
-.card{
-    border: 1px solid rgb(240, 240, 240);;
+
+.card {
+    border: 1px solid rgb(240, 240, 240);
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.name{
+
+.name {
     font-size: 1.5rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
-.img{
+
+.img {
     width: 200px;
     margin: auto;
 }
-.price{
+
+.price {
     font-size: 1.5rem;
     font-weight: 800;
+    margin-left: 10px;
 }
-.quantity{
+
+.quantity {
     width: 50px;
     height: 30px;
-    padding: 5px ;
+    padding: 5px;
     border-radius: 5px;
     font-size: 1rem;
-    
+    margin-left: 10px;
+    cursor: pointer;
 }
-.cart-butt{
+
+.cart-butt {
     color: white;
     background-color: green;
     padding: 5px;
@@ -38,11 +48,31 @@
     width: 80%;
     font-size: 1.5rem;
     text-align: center;
-    margin:auto;
+    margin: auto;
     margin-top: 15px;
     cursor: pointer;
+    margin-bottom: 10px;
 }
-.cart-butt:hover{
-    background-color:hsl(100, 100%,35%) ;
+
+.cart-butt:hover {
+    background-color: hsl(100, 100%, 35%);
     cursor: pointer;
+}
+
+@media (max-width:1220px) {
+    .product-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width:860px) {
+    .product-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width:660px) {
+    .product-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
