--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,99 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body,html{
+
+body,
+html {
     width: 100%;
     height: 100%;
 }
-.title{
+
+.title {
     font-size: 2rem;
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 500;
+    cursor: pointer;
 }
-nav{
+
+nav {
     position: sticky;
     background-color: darkgreen;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     height: 60px;
     align-items: center;
     top: 0;
 }
-.inp{
+
+.inp {
     font-size: 1rem;
     padding: 5px;
     border-radius: 5px;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
-.li{
+
+.li {
     list-style: none;
     color: white;
     font-size: 1.5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 700;
+    cursor: pointer;
 }
-.container{
+
+a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.5rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.container {
     display: flex;
     align-items: center;
-    gap:20px;
+    gap: 20px;
 }
-.input-container{
+
+.input-container {
     width: 50%;
     height: 80%;
     display: flex;
     justify-content: center;
 }
-.butt{
+
+.butt {
     background-color: lightgreen;
     color: white;
     border-radius: 5px;
     padding: 5px;
     font-size: 1rem;
+    cursor: pointer;
+}
+
+@media (max-width:1220px) {
+    .title {
+        font-size: 1.5rem;
+    }
+
+    .li {
+        font-size: 1rem;
+    }
+
+    .input-container {
+        width: 50%;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .butt {
+        font-size: 1rem;
+    }
 }
